[package]
name = "css_modules_rs"
version = "0.1.0"
authors = ["mori5321 <moriwm77@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
cssparser = "0.27.2"
serde_json = "^1.0.41"
serde = { version = "^1.0.101", features = ["derive"] }
lazy_static = "1.4.0"
path-clean = "0.1.0"
